--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <app-search></app-search>
 <app-tags></app-tags>
 <ul>
-  <li *ngFor="let food of foods">
+  <li (click)="goToPage(food)" *ngFor="let food of foods">
     <a>
-      <img  src=" {{ food.imageUrl }}" alt="" />
+      <img src=" {{ food.imageUrl }}" alt="" />
       <div class="content">
         <div class="name">
           {{ food.name }}
