--- a/src/app/components/pages/cart-page/cart-page.component.html
+++ b/src/app/components/pages/cart-page/cart-page.component.html
@@ -1,1 +1,11 @@
-<p>cart-page works!</p>
+<app-title title="Cart Page" margin="1.5rem 0 0 2.5rem"></app-title>
+
+<div class="container">
+  <ul>
+    <li *ngFor="let cartItem of cart.items">
+      <div>
+        <img [src]="cartItem.food.imageUrl" [alt]="cartItem.food.name">
+      </div>
+    </li>
+  </ul>
+</div>
