--- a/src/app/components/pages/cart-page/cart-page.component.css
+++ b/src/app/components/pages/cart-page/cart-page.component.css
@@ -105,3 +105,20 @@ li .remove-button:hover {
     content: 'price: ';
     color: grey;
 }
+
+.checkout a {
+    padding: 1rem;
+    color: white;
+    background: #e72929;
+    display: block;
+    width: 99%;
+    border-radius: 1rem;
+    text-align: center;
+    opacity: 0.7;
+    justify-self: center;
+}
+
+.checkout a:hover {
+    opacity: 1;
+    cursor: pointer;
+}
